# scriptit

./: Cargo.toml  LICENSE  README.md
.github/workflows/: cargo.yml  wasm-pack.yml
src/: lib.rs
src/core/: error.rs  mod.rs  value.rs
src/js/: shared_bootstrap.js
src/js_v8/: mod.rs  v8_bootstrap.js
src/js_wasm/: mod.rs  wasm_bootstrap.js
tests/: core_call.rs  eval.rs  func_call.rs  isolation.rs  registration.rs
