[package]
name = "scriptit"
version = "0.1.0"
authors = ["Robin Ricard <git@rricard.me>"]
edition = "2018"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rusty_v8 = "0.9.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.67"

[dev-dependencies]
wasm-bindgen-test = "0.3.17"