[package]
name = "scriptit"
version = "0.2.0"
authors = ["Robin Ricard <git@rricard.me>"]
edition = "2018"
description = "scriptit is a simple way to run JavaScript code in Rust (native+wasm)"
readme = "README.md"
repository = "https://github.com/rricard/scriptit/"
license = "MIT"
keywords = [ "scripting", "javascript", "wasm", "v8" ]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = "1.0"
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4", "wasm-bindgen"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rusty_v8 = "0.9.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.67", features = ["serde-serialize"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.17"